--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -8,6 +8,12 @@ on:
         description: 'JSON-encoded test properties'
         type: string
         required: true
+  workflow_dispatch:
+    inputs:
+      platforms:
+        description: 'JSON-encoded test properties'
+        type: string
+        required: true
 
 jobs:
   build:
